--- a/mythesis.tex
+++ b/mythesis.tex
@@ -787,11 +787,11 @@ P(X_{t+1} = x|X_{t}. . . X_{1}) = P(X_{t+1} = x|X_{t}).
 A Markov chain is a random walk with Markov property.
  
 The Metropolis algorithm works by taking an arbitrary move near the current
-point. If $X_{t}$ is the sample at time t, then the new sample Y is propesed from the proposal distribution $q(Y|X_{t})$. The likelihood of this new sample is then compared to that of the previous sample. The likelihood ratio $\alpha$ between the to states is calculated with the following equation:
+point. If $X_{t}$ is the sample at time t, then the new sample Y is proposed from the proposal distribution $q(Y|X_{t})$. The likelihood of this new sample is then compared to that of the previous sample. The likelihood ratio $\alpha$ between the to states is calculated with the following equation:
 \be \label{eq:likely_ratio} 
 \alpha = \frac{p(Y|D)q(X_{t}|Y)}{p(X_{t}|D)q(Y|X_{t})}.
 \ee
-The conditional probabilities given the data are calculated using the Bayes's formula (\ref{eq:bayes}). The ratio of these probabilites is multiplied with the ratio of proposal distributions (sometimes called transition kernels) so that the algorithm satisfy condition called detailed balance. It is an important property for proving the convergence of the chain. It states that a step from $X_{t}$ must have the same probability as a step from $Y$ to $X_{t}$.  The proposal density $q(X_{t}|Y)$ describes the probability of a transition from $Y$ j to $X_{t}$ in the parameter space.
+The conditional probabilities given the data are calculated using the Bayesian formula (\ref{eq:bayes}). The ratio of these probabilities is multiplied with the ratio of proposal distributions (sometimes called transition kernels) so that the algorithm satisfy condition called detailed balance. It is an important property for proving the convergence of the chain. It states that a step from $X_{t}$ must have the same probability as a step from $Y$ to $X_{t}$.  The proposal density $q(X_{t}|Y)$ describes the probability of a transition from $Y$ j to $X_{t}$ in the parameter space.
 
 The next step is to decide whether the likelihood ratio is high enough in order to accept the new step. In Metropolis(-Hastings) algorithm, we automatically accept a step, if $\alpha \ge 1$, but otherwise with a probability $\alpha$ (if $\alpha$ is greater than a random number between 0 and 1). If the new state is accepted, we repeat the first steps using now $Y$ as the current point. Otherwise we propose the new sample using again the same $X_{t}$. 
 
@@ -801,7 +801,7 @@ The next step is to decide whether the likelihood ratio is high enough in order 
 It can be seen that the acceptance rule simplifies considerable when the
 proposal density is indeed symmetric ($q(X_{t}|Y)$=$q(Y|X_{t})$). The algorithm is typically repeated until the obtained chains are long enough in the sense that their statistics do not change significantly when adding new members to the chain. Whether the obtained samples are statistically representative of the posterior can be verified if several chains with different initial states result in the same posterior density.
 
-Metropolis algorithm has also some limitations. The generated samples are not indpendent, since they are generated in a chain (concerns also other MCMC methods). The correlation between the samples can be measured by the autocorrelation time (ADD DEFINITION...and more). 
+Metropolis algorithm has also some limitations. The generated samples are not independent, since they are generated in a chain (concerns also other MCMC methods). The correlation between the samples can be measured by the autocorrelation time (ADD DEFINITION...and more). 
 
 
 One major disadvantage is that the Metropolis algorithm may work poorly for skewed, or anisotropic, distributions, depending on the proposal distribution (ADD EXAMPLES). Partially for this reason we have moved to use the ensemble sampler, which is presented in the next section. 
@@ -810,8 +810,57 @@ One major disadvantage is that the Metropolis algorithm may work poorly for skew
 
 \subsubsection{Ensemble sampler}
 
-In this algorithm, we use a group or ensemble of sequences. Each member of
-the ensemble is called a walker.
+The affine invariant ensemble sampler is a novel MCMC method developed a few years ago (Goodman, Weare...). The algorithm has a similar structure to Metropolis, and still uses a proposal and and accept/reject step. But instead of only one sequence $X_{1}...X_{t}$, we use now a group or ensemble of sequences. Each member of the ensemble is called a walker. On each iteration the algorithm generates a new sample for every walker using the  current positions of all of the other walkers in
+the ensemble. However each walker is independent of the other walkers and is not correlated with the previous states of other walkers (it is correlated only to its own previous state).
+
+
+
+%http://msp.org/camcos/2010/5-1/camcos-v5-n1-p04-s.pdf
+
+The ensemble sampler is called affine invariant, since its performance is unaffected by affine transformations of space. This means that sampling a PDF g(x) = Af(x) + b is equivalent to sampling
+f then applying A and b after. This is the reason why the algorithm is particularly useful for sampling badly scaled distributions. Computational tests show that the affine invariant methods can be significantly faster than standard MCMC methods on highly skewed distributions.
+
+In ensemble sampler the  Markov chain is evolved by moving one walker at time. Each walker $X_{k}$ is updated using the current positions of all of the other walkers in
+the ensemble (we call them complementary ensemble). The motivation is that the distribution of the walkers in the complementary ensemble carries useful information about the probability density of the parameters. This way the trial move can be adapted to the target density.  
+
+
+%If L is the number of the walkers, these walkers (besides $X_{k}$ ) form the complementary ensemble
+
+%\be \label{eq:compl_ensemble} 
+%X_{k}(t+1) = X_{1}(t + 1), . . . , X_{k−1}(t + 1), X_{k+1}(t), . . . , X_{l} (t).
+%1=2
+%\ee
+
+%In this algorithm, we use a group or ensemble of sequences. Each member of
+%the ensemble is called a walker.
+
+One of the simplest affine invariant trial moves is stretch-move (we use it). In a stretch-move each walker is moved using only one randomly selected complementary walker (see Fig. \ref{fig:smove}). The move proposed alone a line between the current walker k and the complementary walker j according to the distribution
+\be \label{eq:smove}
+Y = X(j) + Z(X(k)-X(j)),
+\ee
+where the scaling variable $Z$ satisfy the symmetry condition
+\be \label{eq:symmetry_condition}
+g(1/z) = zg(z).
+\ee
+This ensures that the move \ref{eq:smove} is symmetric in the usual informal way Metropolis is discussed (detailed balance is satisfied).
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{figure}
+\centerline{\epsfig{file=stretchmove.png,width=8.0cm}}
+\caption{A stretch move for updating the position of $X_{k}$ based on the position of another random walker, $X_{j}$ (subscript identifies here the walker instead of the step count). The light-gray walkers are other members of the ensemble. Figure 2 from Goodman and Weare (2010).
+\label{fig:smove}}
+\end{figure}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+When deciding whether the new sample is good enough, the Metropolis-Hastings selection rules are again applied. However instead of equation \ref{eq:likely_ratio} the likelihood ratio is now calculated (for a given walker)
+\be \label{eq:likely_ratio_smove} 
+\alpha = Z^{N-1}\frac{p(Y|D)}{p(X_{t}|D)},
+\ee
+where N is the number of parameters sampled. 
+
+
 
 \subsubsection{Implementation}
 
