--- a/bib1.bib
+++ b/bib1.bib
@@ -143,3 +143,76 @@
 	year = 1973
 }
 
+@article{lattimer,
+	abstract = "Neutron stars are some of the densest manifestations of massive objects in the universe. They are ideal astrophysical laboratories for testing theories of dense matter physics and provide connections among nuclear physics, particle physics and astrophysics. Neutron stars may exhibit conditions and phenomena not observed elsewhere, such as hyperon-dominated matter, deconfined quark matter, superfluidity and superconductivity with critical temperatures near ${10^{10}}$ kelvin, opaqueness to neutrinos, and magnetic fields in excess of $10^{13}$ Gauss. Here, we describe the formation, structure, internal composition and evolution of neutron stars. Observations that include studies of binary pulsars, thermal emission from isolated neutron stars, glitches from pulsars and quasi-periodic oscillations from accreting neutron stars provide information about neutron star masses, radii, temperatures, ages and internal compositions.",
+	archiveprefix = "arXiv",
+	author = "Lattimer, J. M. and Prakash, M.",
+	comment = "published = 2004-05-13T17:54:43Z, updated = 2004-05-13T17:54:43Z, 22 pages, 4 figures and 1 table",
+	doi = "10.1126/science.1090720",
+	eprint = "astro-ph/0405262v1",
+	journal = "Science 304:536-542,2004",
+	month = may,
+	primaryclass = "astro-ph",
+	title = "{The Physics of Neutron Stars}",
+	url = "http://arxiv.org/abs/astro-ph/0405262v1; http://arxiv.org/pdf/astro-ph/0405262v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "2004"
+}
+
+@article{rhoades,
+	author = "Rhoades, C.E. and Ruffini, R.",
+	journal = "Phys. Rev. Lett. 32, 324",
+	title = "{Maximum Mass of a Neutron Star}",
+	year = "1974"
+}
+
+@article{patruno,
+	added-at = "2013-05-12T07:23:46.000+0200",
+	adsnote = "Provided by the SAO/NASA Astrophysics Data System",
+	adsurl = "http://adsabs.harvard.edu/abs/2012arXiv1206.2727P",
+	archiveprefix = "arXiv",
+	author = "{Patruno}, A. and {Watts}, A. L.",
+	eprint = "1206.2727",
+	interhash = "31583b24c74636e7b72b10e2f6895acb",
+	intrahash = "739cf49d37b155e6b250fbc14c9d5bf4",
+	journal = "ArXiv e-prints",
+	keywords = "thesis 1023-timing-paper lmxb amxp",
+	month = jun,
+	primaryclass = "astro-ph.HE",
+	timestamp = "2013-05-12T07:23:46.000+0200",
+	title = "{Accreting Millisecond X-Ray Pulsars}",
+	url = "http://www.bibsonomy.org/bibtex/2739cf49d37b155e6b250fbc14c9d5bf4/aarchiba",
+	x-fetchedfrom = "Bibsonomy",
+	year = 2012
+}
+
+@article{twocompmod,
+	author = "{Gierli\'{ }nski}, M. and Done, C. and Barret, D.",
+	journal = "MNRAS 331, 141",
+	title = "{Phase-resolved X-ray spectroscopy of the millisecond pulsar SAX J1808.4---3658}",
+	year = "2002"
+}
+
+@article{pechenick,
+	author = "Pechenick, K. R. and Ftaclas, C. and Cohen, J. M.",
+	journal = "APJ, 274, 846-857",
+	title = "{Hot spots on neutron stars - The near-field gravitational lens}",
+	year = "1983"
+}
+
+@article{poutagierlinskisax,
+	abstract = {The pulse profiles of the accreting X-ray millisecond pulsar SAX J1808.4-3658 at different energies are studied. The two main emission component, the black body and the Comptonized tail that are clearly identified in the time-averaged spectrum, show strong variability with the first component lagging the second one. The observed variability can be explained if the emission is produced by Comptonization in a hot slab (radiative shock) of Thomson optical depth ~0.3-1 at the neutron star surface. The emission patterns of the black body and the Comptonized radiation are different: a "knife"- and a "fan"-like, respectively. We construct a detailed model of the X-ray production accounting for the Doppler boosting, relativistic aberration and gravitational light bending in the Schwarzschild spacetime. We present also accurate analytical formulae for computations of the light curves from rapidly rotating neutron stars using formalism recently developed by Beloborodov (2002). Our model reproduces well the pulse profiles at different energies simultaneously, corresponding phase lags, as well as the time-averaged spectrum. We constrain the compact star mass to be bounded between 1.2 and 1.6 solar masses. By fitting the observed profiles, we determine the radius of the compact object to be R~11 km if M=1.6 M\_sun, while for M=1.2 M\_sun the best-fitting radius is ~6.5 km, indicating that the compact object in SAX J1808.4-3658 can be a strange star. We obtain a lower limit on the inclination of the system of 65 degrees.},
+	archiveprefix = "arXiv",
+	author = "Poutanen, Juri and Gierlinski, Marek",
+	comment = "published = 2003-03-04T16:54:23Z, updated = 2003-03-04T16:54:23Z, 11 pages, 7 figures, submitted to MNRAS",
+	doi = "10.1046/j.1365-8711.2003.06773.x",
+	eprint = "astro-ph/0303084v1",
+	journal = "MNRAS 343, 1301",
+	month = mar,
+	primaryclass = "astro-ph",
+	title = "{On the Nature of the X-ray Emission from the Accreting Millisecond Pulsar SAX J1808.4-3658}",
+	url = "http://arxiv.org/abs/astro-ph/0303084v1; http://arxiv.org/pdf/astro-ph/0303084v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "2003"
+}
+
