--- a/mythesis.tex
+++ b/mythesis.tex
@@ -230,7 +230,7 @@ Näitä noudattamalla saadaan vähennettyä ainakin yksi tarkastuskierros.
 
 
 Neutron stars are some of the densest and most massive objects in the
-universe. Typical mass of a neutron star (M) is on the order of 1.5 solar masses ($M_{\odot}$), and typical radius R on the order of 12 km. The central density $n_{c}$ can be from 5 to 10 times the nuclear equilibrium density $n_{0} \approx 0.16 fm^{-3}$ of neutrons and protons found in laboratory nuclei. Neutrons dominate the nucleonic component of neutron stars, but also some protons, electrons and muons exist. At the supernuclear densities also more exotic baryons, mesons or quarks may appear.
+universe. Typical mass of a neutron star (M) is on the order of 1.5 solar masses ($M_{\odot}$), and typical radius R on the order of 12 km. The central density $n_{c}$ can be from 5 to 10 times the nuclear equilibrium density $n_{0} \approx 0.16 fm^{-3}$ of neutrons and protons found in laboratory nuclei ~\cite{lattimer}. Neutrons dominate the nucleonic component of neutron stars, but also some protons, electrons and muons exist. At the supernuclear densities also more exotic baryons, mesons or quarks may appear.
 
  
 Neutron stars are created after the gravitational collapse of the core of a
@@ -242,13 +242,13 @@ massive star (>8$M_{\odot}$) at the end of its life, which triggers a Type II su
 where G is the gravitational constant and c is the speed of light, constrains the possible mass and radius of neutron stars.
 
 A more strict upper bound to the compactness (ratio between mass and radius) of the star follows
-the fact %(/PhysRevLett.32.324 )
+the fact ~\cite{rhoades} %(/PhysRevLett.32.324 )
 that the speed of sound in dense matter have to be less than the speed of light. This gives us the so called causality condition
 
 \begin{equation}
  R \gtrsim \frac{3GM}{c^{2}}.
  \end{equation} 
-Neutron stars have also a minimum stable neutron star mass, which is about 0.1 $M_{\odot}$ , although the neutron star’s origin in a supernova gives a more realistic minimum.
+Neutron stars have also a minimum stable neutron star mass, which is about 0.1 $M_{\odot}$ , although the neutron star’s origin in a supernova gives a more realistic minimum ~\cite{lattimer}.
 
 
 
@@ -266,7 +266,7 @@ and
  \end{equation}
 where P and $\rho$ are the pressure and mass-energy density, respectively, and m(r) is the gravitational mass enclosed within a radius r. M-R relation can now be obtained if the relation between pressure and density $P=P(\rho)$ is known. The relation we call the equation of state (EOS). For a realistic EOS the previous equations must be numerically solved to obtain M-R relation. These can be separated into three categories according to the compressibility of the matter: soft, moderate and stiff equations of state.
 
-%http://journals.aps.org/prl/pdf/10.1103/PhysRevLett.32.324
+%http://journals.aps.org/prl/pdf/10.1103/PhysRevLett.32.324 %link works in Tuorla
 
 
 
@@ -280,11 +280,11 @@ One more potential constraint on the EOS is based on the rotation of neutron sta
 
 
 Since the discovery of neutron stars as radio pulsars
-in 1967, many different classes have been discovered including low mass X-ray binaries (LMXBs). In LMXBs the neutron star accretes matter from a non-collapsed stellar companion (with mass M $\gtrsim  M_{\odot}$) via an accretion disk. Accreting millisecond X-ray pulsars (AMXPs) is a subgroup of the LMXBs, in which the gas stripped from the companion is channeled out of the accretion disk onto the magnetic poles of the rotating neutron star. This gives rise to the X-ray pulsations at the spin frequency of the neutron star. By definition AMXPs are also spinning at frequencies $\nu \ge 100 \, \mathrm{Hz}$ and have weak surface magnetic fieds ($B \sim 10^{8-9}$). All known AMXPs have donor stars that transfer mass via Roche lobe overflow. 
+in 1967, many different classes have been discovered including low mass X-ray binaries (LMXBs). In LMXBs the neutron star accretes matter from a non-collapsed stellar companion (with mass M $\gtrsim  M_{\odot}$) via an accretion disk. Accreting millisecond X-ray pulsars (AMXPs) is a subgroup of the LMXBs, in which the gas stripped from the companion is channeled out of the accretion disk onto the magnetic poles of the rotating neutron star. This gives rise to the X-ray pulsations at the spin frequency of the neutron star. By definition AMXPs are also spinning at frequencies $\nu \ge 100 \, \mathrm{Hz}$ and have weak surface magnetic fieds ($B \sim 10^{8-9}$) ~\cite{patruno}. All known AMXPs have donor stars that transfer mass via Roche lobe overflow. 
 
 
 
-The first AMXP discovered was SAX J1808.4–3658. It is also the main observed target in this thesis. The source was first found in 1996 by the Italian-Dutch BeppoSAX satellite, but the first coherent pulsations (at 401 Hz) were detected during the second outburst with Rossi X-ray Timing Explorer (RXTE) in 1998.  It provided a confirmation of the "recycling scenario", wchich states that AMXPs are the evolutionary progenitors of recycled radio millisecond pulsars. They are responsible for the conversion of slow neutron stars with high magnetic field ($B \sim 10^{12}$), into a rapidly spinning objects with a relatively weak magnetic field ($B \sim 10^{8}$). 
+The first AMXP discovered was SAX J1808.4–3658. It is also the main observed target in this thesis. The source was first found in 1996 by the Italian-Dutch BeppoSAX satellite, but the first coherent pulsations (at 401 Hz) were detected during the second outburst with Rossi X-ray Timing Explorer (RXTE) in 1998.  It provided a confirmation of the "recycling scenario", wchich states that AMXPs are the evolutionary progenitors of recycled radio millisecond pulsars. They are responsible for the conversion of slow neutron stars with high magnetic field ($B \sim 10^{12}$), into a rapidly spinning objects with a relatively weak magnetic field ($B \sim 10^{8}$) ~\cite{patruno}. 
 
 
 SAX J1808.4–3658 went into outburst again in 2000, 2002, 2005, 2008 and 2011,
@@ -294,7 +294,7 @@ fast rise, with a steep increase in luminosity lasting only a few days, a peak, 
 decay stage, a fast decay phase and the flaring tail. Except the last phase, they can in principle be partially explained with the disk instability model. %pulse profiles from which phase?
 
 
-The X-ray spectrum of the outbursts have also been analysed and there is evidence for a two component-model: a blackbody at soft energies and a hard Comptonization component at higher energies [%http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?2002MNRAS.331..141G&defaultprint=YES&filetype=.pdf]
+The X-ray spectrum of the outbursts have also been analysed and there is evidence for a two component-model: a blackbody at soft energies and a hard Comptonization component at higher energies ~\cite{twocompmod} %http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?2002MNRAS.331..141G&defaultprint=YES&filetype=.pdf]
 . The blackbody is interpreted as the heated hot spot on the neutron star surface and the Comptonization is produced in a accretion shock. This shock is created at the bottom of the magnetic field lines as the plasma abruptly decelerates close to the neutron star surface.
 
 
@@ -329,8 +329,8 @@ have revealed the possible presence of jets.
 
 \subsection{Pulse profile modelling}
 
-The oscillations in the flux during the outbursts (the light curves) of accreting millisecond pulsars (described in the first chapter) can be modelled with different models. The model presented here assumes that the radiation is originated from one or two polar spots locating at the polar caps of the stars. General and special relativistic effects have been taken account using so called Schwarzschild-Doppler (S+D) approximation (Miller, Lamb 1998, Poutanen, Gierlinski 2003). In the S+D approximation the gravitational light-bending effects are modelled as though the star is not rotating using the Schwarzschild metric and the formalism prescribed by
-Pechenick, Ftaclas... %, & Cohen (1983). 
+The oscillations in the flux during the outbursts (the light curves) of accreting millisecond pulsars (described in the first chapter) can be modelled with different models. The model presented here assumes that the radiation is originated from one or two polar spots locating at the polar caps of the stars. General and special relativistic effects have been taken account using so called Schwarzschild-Doppler (S+D) approximation (Miller, Lamb 1998, Poutanen, Gierlinski 2003)~\cite{poutagierlinskisax}. In the S+D approximation the gravitational light-bending effects are modelled as though the star is not rotating using the Schwarzschild metric and the formalism prescribed by
+Pechenick, Ftaclas and Cohen (1983)~\cite{pechenick}. 
 Rotational effects are added by introducing Doppler terms as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
 
 
